objects/adapps__OptimizerPlus_Out_Of_Date_Browsers_Item__c.object
<CustomObject>
    <fields>
        <fullName>adapps__Application__c</fullName>
        <label>Application</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adapps__Browser__c</fullName>
        <label>Browser</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adapps__Last_Login__c</fullName>
        <label>Last_Login</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adapps__Out_Of_Date_Browsers__c</fullName>
        <label>Out-of-Date Browsers</label>
        <referenceTo>adapps__OptimizerPlus_Out_Of_Date_Browsers__c</referenceTo>
        <relationshipLabel>Out Of Date Browsers Items</relationshipLabel>
        <relationshipName>Out_Of_Date_Browsers_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>adapps__Platform__c</fullName>
        <label>Platform</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adapps__Url__c</fullName>
        <label>Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>adapps__User_Name__c</fullName>
        <label>User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Out Of Date Browsers Item</label>
    <nameField>
        <label>Out Of Date Browsers Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Out Of Date Browsers Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>